Make macOS dmg and pkg tests actually run.
They were being skipped by an outdated assumption. This wound up leading
to some Travis CI related annoyances with hdiutil stalling out. I have
run the tests locally and they do indeed pass.